--- a/etc/opennds/htdocs/splash2.css
+++ b/etc/opennds/htdocs/splash2.css
@@ -7,9 +7,9 @@
     color-scheme: light only;
     
     /* الخلفية */
-    --bg-grad-1: #2c3e50;
-    --bg-grad-2: #2c3e50;
-    --bg-grad-3: #2c3e50;
+    --bg-grad-1: #1a1a1a;
+    --bg-grad-2: #1a1a1a;
+    --bg-grad-3: #1a1a1a;
     --text-color: #333;
 
     /* الكارت */
