--- a/etc/opennds/htdocs/splash9.css
+++ b/etc/opennds/htdocs/splash9.css
@@ -7,7 +7,7 @@
    ====================================
 */
 :root {
-    color-scheme: light;
+    color-scheme: light only;
     /* خلفية متدرجة من الأزرق السماوي الفاتح جداً */
     --bg-grad-1: #E0F7FA; /* Cyan 50 */
     --bg-grad-2: #B2EBF2; /* Cyan 100 */
