--- a/etc/opennds/htdocs/splash10.css
+++ b/etc/opennds/htdocs/splash10.css
@@ -1,5 +1,5 @@
 /* ====================================
-   9. تصميم "Dusty Rose" (وردي ترابي ناعم)
+  تصميم "Dusty Rose" (وردي ترابي ناعم)
    ====================================
 */
 :root {
