--- a/etc/opennds/htdocs/splash.css
+++ b/etc/opennds/htdocs/splash.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     max-width: 500px;
     min-width: 300px;
-    padding: 15px;
+    padding: 15px 10px;
     position: relative;
     overflow: hidden;
     border: 1px solid rgba(255, 255, 255, 0.25);
